--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+
+.navApp {
+    background-color: rgb(46, 139, 87);
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    border-bottom: 7px rgb(46, 139, 87) ;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#name {
+    font-size: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+    padding: 30px 0 30px 0;
+    background-color: rgb(184, 174, 174);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-header {
+    border-top: 5px solid rgb(46, 139, 87);
+    border-left: 5px solid rgb(46, 139, 87);
+    border-right: 5px solid rgb(46, 139, 87);
 }
 
-.App-link {
-  color: #61dafb;
+.card-body {
+    border-left: 5px solid rgb(46, 139, 87);
+    border-bottom: 5px solid rgb(46, 139, 87);
+    border-right: 5px solid rgb(46, 139, 87);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.aboutApp, .portfolioApp, .contactApp, html {
+    background-color: rgb(184, 174, 174);
 }
